[gd_scene load_steps=9 format=3 uid="uid://c53874ps1d4sx"]

[ext_resource type="Script" path="res://stage.gd" id="1_8naxd"]
[ext_resource type="PackedScene" uid="uid://lhk8lrdqrgw8" path="res://box.tscn" id="1_kphpl"]
[ext_resource type="PackedScene" uid="uid://c03pa0350rrx7" path="res://stage2.tscn" id="2_ya1lr"]
[ext_resource type="TileSet" uid="uid://b3uhm77388uhf" path="res://tile_set.tres" id="4_pouav"]
[ext_resource type="PackedScene" uid="uid://x3emcrwga0ea" path="res://player.tscn" id="5_24vy3"]
[ext_resource type="PackedScene" uid="uid://d3kjrxl0whgyo" path="res://win_screen.tscn" id="7_8lxok"]
[ext_resource type="Shader" path="res://stage.gdshader" id="7_invr4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4xgbo"]
shader = ExtResource("7_invr4")
shader_parameter/lod = 4.0
shader_parameter/onoff = false

[node name="Stage1" type="Node"]
script = ExtResource("1_8naxd")
next_level = ExtResource("2_ya1lr")
lvl_num = 1

[node name="Shader" type="Node2D" parent="."]
material = SubResource("ShaderMaterial_4xgbo")

[node name="TileMap" type="TileMap" parent="Shader"]
use_parent_material = true
tile_set = ExtResource("4_pouav")
format = 2
layer_0/name = "Interact"
layer_0/z_index = 3
layer_1/name = "Underfoot"
layer_1/z_index = 2
layer_1/tile_data = PackedInt32Array(262155, 1, 196608, 262150, 1, 131072)
layer_2/name = "Floor"
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array(196608, 2, 0, 262144, 2, 1, 327680, 2, 2, 196614, 65538, 0, 196609, 65538, 0, 262145, 65538, 1, 327681, 65538, 2, 327682, 65538, 2, 262146, 65538, 1, 196610, 65538, 0, 196611, 65538, 0, 262147, 65538, 1, 327683, 65538, 2, 327684, 65538, 2, 262148, 65538, 1, 196612, 65538, 0, 196613, 65538, 0, 262149, 65538, 1, 327685, 65538, 2, 327686, 65538, 2, 262150, 65538, 1, 262151, 65538, 1, 196616, 65538, 0, 262152, 65538, 1, 327688, 65538, 2, 327687, 65538, 2, 327689, 65538, 2, 262153, 65538, 1, 196617, 65538, 0, 196618, 65538, 0, 262154, 65538, 1, 327690, 65538, 2, 327691, 65538, 2, 262155, 65538, 1, 196619, 65538, 0, 196620, 65538, 0, 262156, 65538, 1, 327692, 65538, 2, 327693, 65538, 2, 262157, 65538, 1, 196621, 65538, 0, 327695, 131074, 2, 262159, 131074, 1, 196623, 131074, 0, 196622, 65538, 0, 262158, 65538, 1, 327694, 65538, 2, 196615, 65538, 0)
layer_3/name = "Background"
layer_3/tile_data = PackedInt32Array(0, 655362, 0, 65536, 655362, 0, 131072, 655362, 0, 196608, 655362, 0, 262144, 655362, 0, 327680, 655362, 0, 393216, 655362, 0, 458752, 655362, 0, 458753, 655362, 0, 458754, 655362, 0, 458755, 655362, 0, 458756, 655362, 0, 458757, 655362, 0, 458758, 655362, 0, 458759, 655362, 0, 458760, 655362, 0, 458761, 655362, 0, 458762, 655362, 0, 458763, 655362, 0, 458764, 655362, 0, 458765, 655362, 0, 458766, 655362, 0, 393230, 655362, 0, 327694, 655362, 0, 262158, 655362, 0, 196622, 655362, 0, 131086, 655362, 0, 65550, 655362, 0, 14, 655362, 0, 13, 655362, 0, 12, 655362, 0, 11, 655362, 0, 10, 655362, 0, 9, 655362, 0, 8, 655362, 0, 7, 655362, 0, 6, 655362, 0, 5, 655362, 0, 4, 655362, 0, 3, 655362, 0, 2, 655362, 0, 1, 655362, 0, 524288, 655362, 0, 524289, 655362, 0, 524290, 655362, 0, 524291, 655362, 0, 524292, 655362, 0, 524293, 655362, 0, 524294, 655362, 0, 524295, 655362, 0, 524296, 655362, 0, 524297, 655362, 0, 524298, 655362, 0, 524299, 655362, 0, 524300, 655362, 0, 524301, 655362, 0, 524302, 655362, 0, 15, 655362, 0, 65551, 655362, 0, 131087, 655362, 0, 196623, 655362, 0, 262159, 655362, 0, 327695, 655362, 0, 393231, 655362, 0, 458767, 655362, 0, 524303, 655362, 0, 65537, 655362, 0, 131073, 655362, 0, 196609, 655362, 0, 262145, 655362, 0, 327681, 655362, 0, 393217, 655362, 0, 65538, 655362, 0, 131074, 655362, 0, 196610, 655362, 0, 262146, 655362, 0, 327682, 655362, 0, 393218, 655362, 0, 65539, 655362, 0, 131075, 655362, 0, 196611, 655362, 0, 262147, 655362, 0, 327683, 655362, 0, 393219, 655362, 0, 65540, 655362, 0, 131076, 655362, 0, 196612, 655362, 0, 262148, 655362, 0, 327684, 655362, 0, 393220, 655362, 0, 65541, 655362, 0, 131077, 655362, 0, 196613, 655362, 0, 262149, 655362, 0, 327685, 655362, 0, 393221, 655362, 0, 65542, 655362, 0, 131078, 655362, 0, 196614, 655362, 0, 262150, 655362, 0, 327686, 655362, 0, 393222, 655362, 0, 65543, 655362, 0, 131079, 655362, 0, 196615, 655362, 0, 262151, 655362, 0, 327687, 655362, 0, 393223, 655362, 0, 65544, 655362, 0, 131080, 655362, 0, 196616, 655362, 0, 262152, 655362, 0, 327688, 655362, 0, 393224, 655362, 0, 65545, 655362, 0, 131081, 655362, 0, 196617, 655362, 0, 262153, 655362, 0, 327689, 655362, 0, 393225, 655362, 0, 65546, 655362, 0, 131082, 655362, 0, 196618, 655362, 0, 262154, 655362, 0, 327690, 655362, 0, 393226, 655362, 0, 65547, 655362, 0, 131083, 655362, 0, 196619, 655362, 0, 262155, 655362, 0, 327691, 655362, 0, 393227, 655362, 0, 65548, 655362, 0, 131084, 655362, 0, 196620, 655362, 0, 262156, 655362, 0, 327692, 655362, 0, 393228, 655362, 0, 65549, 655362, 0, 131085, 655362, 0, 196621, 655362, 0, 262157, 655362, 0, 327693, 655362, 0, 393229, 655362, 0)

[node name="Player" parent="Shader" instance=ExtResource("5_24vy3")]
use_parent_material = true
position = Vector2(96, 288)

[node name="PlayerStart" type="Marker2D" parent="Shader"]
position = Vector2(96, 288)

[node name="box" parent="Shader" instance=ExtResource("1_kphpl")]
position = Vector2(224, 288)

[node name="WinScreen" parent="." instance=ExtResource("7_8lxok")]

[connection signal="win" from="Shader/box" to="." method="on_win"]
[connection signal="menu" from="WinScreen" to="." method="_on_menu_pressed"]
[connection signal="next_level" from="WinScreen" to="." method="_on_next_level_pressed"]
